# lab_4

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
resources/: Info.plist
